# Misaka

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  installer.iss  misaka.spec  pyproject.toml  requirements.txt
.github/: ABOUT_DESCRIPTION.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG_DETAILED.md  CONVENTIONS.md  PERFORMANCE.md  RELEASE_v1.0.0-alpha.1.md  TECHNICAL_ARCHITECTURE.md  claude-agent-sdk-guide.md  code-review.md  security-review.md
docs/demand/: 桌面端修改内容20260301.txt  桌面端修改内容20260302.md  桌面端修改内容20260302.txt  桌面端修改内容20260307.txt
docs/plans/: 2026-02-23-architecture-design.md  2026-03-01-desktop-refactor.md  2026-03-07-image-preview-overlay.md  2026-03-08-windows-no-console-subprocess-fix.md  misaka-update-solution-spec.md  new-features-plan.md
installer_languages/: ChineseSimplified.isl
misaka/: __init__.py  commands.py  config.py  errors.py  main.py  state.py
misaka/db/: __init__.py  database.py  migrations.py  models.py  row_mappers.py  seekdb_backend.py  sqlite_backend.py
misaka/i18n/: __init__.py  en.json  zh_CN.json  zh_TW.json
misaka/services/: __init__.py  claude_service.py  cli_settings_service.py  env_check_service.py  file_service.py  mcp_service.py  permission_service.py  provider_service.py  router_config_service.py  session_import_service.py  settings_service.py  skill_service.py  task_service.py  update_check_service.py
runtime_hooks/: fix_ssl_certs.py  suppress_console.py
tests/: __init__.py  conftest.py
(+155 files in other folders)
